[gd_scene load_steps=3 format=3 uid="uid://bi8xxwcq3kobu"]

[ext_resource type="Script" path="res://HUD.gd" id="1_1yp8u"]
[ext_resource type="Texture2D" uid="uid://20l3hcfrkfxt" path="res://assets/potato.png" id="1_8ler4"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_1yp8u")

[node name="TimeLabel" type="Label" parent="."]
offset_left = 56.0
offset_right = 264.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 52
text = "00:00:00"
horizontal_alignment = 2

[node name="PotatoLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -192.0
offset_right = -59.0
offset_bottom = 75.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 52
text = "0"
horizontal_alignment = 2

[node name="Potato" type="Sprite2D" parent="PotatoLabel"]
position = Vector2(168, 40)
scale = Vector2(0.625, 0.625)
texture = ExtResource("1_8ler4")

[node name="PauseBackground" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0196078, 0.0196078, 0.0196078, 0.74902)

[node name="PauseLabel" type="Label" parent="PauseBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -56.0
offset_right = 70.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 52
text = "Pause"

[node name="ContinueButton" type="Button" parent="PauseBackground"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.511
anchor_right = 0.5
anchor_bottom = 0.511
offset_left = -61.0
offset_top = 21.58
offset_right = 134.0
offset_bottom = 87.58
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.560001, 0.560001)
theme_override_font_sizes/font_size = 42
text = "Continue"

[connection signal="pressed" from="PauseBackground/ContinueButton" to="." method="_on_continue_button_pressed"]
